# SlimX-RAG

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Dockerfile.gpu  README.md  docker-compose.demo.yml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: ci.yaml  publish-image.yaml
deploy/vps/: Caddyfile  README.md  docker-compose.yml
docs/: architecture.md  customer-demo-quickstart.md  demo-script.md  deployment.md  limitations.md
examples/research_demo/eval/: questions.jsonl
examples/research_demo/knowledge-base/company/: slimx-ai.md
examples/research_demo/knowledge-base/model-lab/: babygpt.md
examples/research_demo/knowledge-base/robotics/: edge-robotics.md
examples/research_demo/knowledge-base/software/: slimx-core.md  slimx-rag.md
examples/tiny_demo/knowledge-base/: overview.md
src/slimx_rag/: __init__.py  answer.py  cli.py  eval.py  retrieve.py  server.py  settings.py
src/slimx_rag/answer/: __init__.py  generator.py
src/slimx_rag/chunk/: __init__.py  chunker.py  structured.py  tokenizer.py
src/slimx_rag/core/: __init__.py  hashing.py
src/slimx_rag/diff/: __init__.py  diff.py
src/slimx_rag/document/: __init__.py  model.py  parser.py  structure.py
src/slimx_rag/document/parsers/: __init__.py  code.py  docx.py  markdown.py  pdf.py  text.py
src/slimx_rag/embed/: __init__.py  embedder.py
src/slimx_rag/eval/: __init__.py  ablation.py  gold.py  metrics.py  runner.py
src/slimx_rag/index/: README.md  __init__.py  base.py  faiss_backend.py  local.py  pgvector_backend.py  qdrant_backend.py  types.py
src/slimx_rag/ingest/: README.md  __init__.py  cli.py  loader.py
src/slimx_rag/manifest/: __init__.py  manifest.py
src/slimx_rag/report/: __init__.py  report.py
src/slimx_rag/retrieval/: __init__.py  hybrid.py  lexical.py  retriever.py  tokenize.py
src/slimx_rag/server/: __init__.py  app.py
src/slimx_rag/static/: index.html
src/slimx_rag/utils/: __init__.py  commons.py
tests/: conftest.py  test_answer_retrieve.py  test_chunker.py  test_cli_demo.py  test_cli_handlers.py  test_diff.py  test_document_parsers.py  test_embedder_device.py  test_embedder_refactor.py  test_eval_ablation.py  test_eval_report.py  test_faiss_backend.py  test_hashing.py  test_hybrid_retrieval.py  test_incremental_indexing.py  test_index_file.py  test_index_plugins.py  test_ingest_loader.py  test_manifest.py  test_package_layout.py  test_pgvector_backend.py  test_qdrant_backend.py  test_report.py  test_server.py  test_settings.py  test_structured_chunker.py  test_utils_commons.py
