[project]
name = "slimx-rag"
version = "0.1.0"
description = "SlimX-RAG: a slim, deterministic RAG indexing pipeline (ingest -> chunk -> embed -> index)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "langchain-core>=0.2.0",
  "langchain-community>=0.2.0",
  "langchain-text-splitters>=0.2.0",

  # Avoid yanked numpy 2.4.0 pulled transitively in some environments
  "numpy<2.4.0",
]

[project.optional-dependencies]
openai = [
  "langchain-openai>=0.1.0",
]
hf = [
  "sentence-transformers>=2.2.2",
]
faiss = [
  "faiss-cpu>=1.7.4",
]
qdrant = [
  "qdrant-client>=1.7.0",
]
pgvector = [
  "psycopg[binary]>=3.1.0",
]

[project.scripts]
slimx-rag = "slimx_rag.cli:main"

[build-system]
requires = ["hatchling>=1.22.0"]
build-backend = "hatchling.build"

[tool.uv]
package = true
