[project]
name = "slimx-rag"
version = "0.1.0"
description = "SlimX-RAG: a slim, deterministic RAG indexing pipeline (ingest -> chunk -> embed -> index)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "SlimX Team", email = "info@slimx.ai" },
]
dependencies = [
  "langchain-community>=0.4,<1",
  "langchain-core>=1.2,<2",
  "langchain-text-splitters>=1",
  "tqdm>=4.66",
  # Avoid yanked numpy 2.4.0 pulled transitively in some environments
  "numpy<2.4.0",
]

[project.optional-dependencies]
openai = [
  "langchain-openai>=0.2,<1",
]
hf = [
  "sentence-transformers>=3.0,<4",
]
faiss = [
  "faiss-cpu>=1.7.4",
]
qdrant = [
  "qdrant-client>=1.7.0",
]
pgvector = [
  "psycopg[binary]>=3.1.0",
]

dev = [
  "pytest>=8.0",
]

[project.scripts]
slimx-rag = "slimx_rag.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/slimx_rag"]

[build-system]
requires = ["hatchling>=1.22.0"]
build-backend = "hatchling.build"

[tool.uv]
package = true
