[project]
name = "slimx-rag"
version = "0.1.1"
description = "SlimX-RAG: a slim, deterministic RAG indexing pipeline (ingest -> chunk -> embed -> index)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "SlimX Team", email = "info@slimx.ai" },
]
dependencies = [
  "langchain-community>=0.4,<1",
  "langchain-core>=1.2,<2",
  "langchain-text-splitters>=1",
  "tqdm>=4.66",
  # Avoid yanked numpy 2.4.0 pulled transitively in some environments
  "numpy<2.4.0",
]

[project.optional-dependencies]
openai = [
  "langchain-openai>=0.2,<1",
]
hf = [
  "sentence-transformers>=3.0,<4",
]
doc = [
  "pypdf>=5.0",
  "python-docx>=1.1",
]
answer = [
]
demo = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  # Required by FastAPI to parse multipart/form-data for POST /api/index/file.
  "python-multipart>=0.0.9",
]
faiss = [
  "faiss-cpu>=1.7.4",
]
qdrant = [
  "qdrant-client>=1.7.0",
]
pgvector = [
  "psycopg[binary]>=3.1.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "build>=1.2",
  "ruff>=0.6",
  "mypy>=1.10",
  "pre-commit>=3.7",
  # Needed by tests/test_server.py (FastAPI TestClient uses httpx).
  "fastapi>=0.115",
  "httpx>=0.27",
  # Multipart parsing for the file-indexing endpoint test.
  "python-multipart>=0.0.9",
  "pypdf>=5.0",
]

[project.scripts]
slimx-rag = "slimx_rag.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/slimx_rag"]


[build-system]
requires = ["hatchling>=1.22.0"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.ruff]
line-length = 120
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
files = ["src"]
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
  "slimx",
  "slimx.*",
  "faiss.*",
  "qdrant_client.*",
  "psycopg.*",
  "sentence_transformers.*",
  "langchain_openai.*",
  "langchain_community.*",
  "uvicorn.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
